# arquivo-da-violencia

./: .cursor-pr-ops-test.md  .env.example  .gitignore  AGENTS.md  AGENT_GUIDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATABASE_RECOVERY.md  DEPLOYMENT.md  Dockerfile  LICENSE  PRODUCTION_TUTORIAL.md  README.dev.md  README.md  alembic.ini  config.py  docker-compose.dev.override.yml  docker-compose.dev.yml  docker-compose.staging.yml  docker-compose.yml  docker-entrypoint.sh  docker-start.sh  docker-up.sh  env.example  env.staging.example  main.py  manage.py  promtail.yml  pyproject.toml  run_with_ngrok.py  run_with_ngrok.sh
.cursor/plans/: adaptive_city_news_ingestion_b02d1657.plan.md  v1_stack_rebuild_c5a63e03.plan.md
.github/: LINEAR_CLOSES_PR21.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/scripts/: triage-backlog.sh
.github/workflows/: backfill-cleanup.yml  deploy-backend.yml  deploy-frontend.yml  deploy-observability.yml  pipeline-enqueue-ingest-once.yml  pipeline-health.yml  pipeline-oncall-verify.yml  pipeline-remediate-hotfix.yml  pipeline-remediate-oncall.yml  pipeline-remediate-once.yml  pipeline-worker-restart-once.yml  triage-backlog.yml
app/: __init__.py  models.py  routes.py
app/services/: enrichment.py  extraction.py  geocoding.py  ingestion.py
app/templates/: about.html  base.html  download.html  extractions.html  incident.html  index.html  sources.html
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/app/: auth.py  config.py  database.py  main.py  metrics.py  taxonomy.py
dashboards/: pipeline-overview.json
docs/: AGENT_GUIDE.md  DATABASE_RECOVERY.md  DEPLOYMENT.md  cursor-automation-vps-ssh.md  db_schema_discussion.md  google news spec.md  observability-self-hosted.md  observability-setup.md  pipeline-auto-remediation.md  postgres-migration-runbook.md  prod-backfill-runbook.md  user-analytics.md
entrypoints/: manage.py  run.py  scheduler.py
frontend/: .dockerignore  Dockerfile  Dockerfile.dev  index.html  nginx.conf  nginx.local.conf  nginx.staging.conf  package-lock.json  package.json  test-auth-handling.html  verify-auth-implementation.js  vite.config.ts
notebooks/: event_extraction.ipynb  load_data.ipynb
scripts/: check-observability.sh  check-pipeline-health.sh  deploy-backend.sh  deploy-frontend.sh  enqueue_ingest_once.py  hash-env-passwords.py  ingest_data.py  merge_duplicate_incidents.py  migrate_db.py  preflight-auth.py  re_extract_death_count.py  re_extract_duplicate_incidents.py  recreate_database.sh  repair_database.py  run_prod_backfill.sh  sync-staging-db.sh  test-alert-router.sh  test_cbn_extraction.py  test_death_count.py  test_death_count_save.py  test_deduplication_29_44.py  test_extraction.py  test_extraction_new_only.py  test_matching_29_44.py  test_processed_status.py  test_prompt_robustness.py  transfer_db.sh
tests/: test_enrichment.py  test_extraction.py  test_ingestion.py
v0/: .dockerignore  config.py
v1/: .gitignore  README.dev.md  README.md  docker-compose.yml  env.example
v1/backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
v1/backend/alembic/: env.py
v1/backend/alembic/versions/: 8d67cac08016_add_city_stats_table.py  c1a2b3c4d5e6_add_classification_fields.py
v1/backend/app/: __init__.py  config.py  database.py  main.py
v1/backend/app/models/: city_stats.py  raw_event.py  source_google_news.py  unique_event.py
v1/backend/app/routers/: pipeline.py  public.py  source_google_news.py  stats.py
v1/backend/app/services/: cities.py  classification.py  download.py  extraction.py  extraction_schemas.py  ingestion.py
v1/backend/app/tasks/: pipeline.py  worker.py
v1/backend/tests/: __init__.py  conftest.py  test_health.py
(+325 files in other folders)
