[project]
name = "arquivo-da-violencia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13.0",
    "feedparser>=6.0.12",
    "flask>=3.1.2",
    "flask-sqlalchemy>=3.1.1",
    "gnews>=0.4.2",
    "google-cloud-aiplatform>=1.130.0",
    "googlemaps>=4.10.0",
    "googlenewsdecoder>=0.1.7",
    "gunicorn>=21.2.0",
    "newspaper3k>=0.2.8",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.45",
    "trafilatura>=2.0.0",
    "python-dateutil>=2.8.0",
    "pytest>=8.0.0",
    "pytest-mock>=3.14.0",
    "pyngrok>=7.0.0",
    "loguru>=0.7.2",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
    "google-generativeai>=0.8.6",
    "contextgem>=0.19.4",
    "langextract>=1.1.1",
    "instructor>=1.13.0",
    "pydantic>=2.12.5",
    "jsonref>=1.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
filterwarnings = [
    # Suppress SQLAlchemy LegacyAPIWarning for Query.get() - we'll migrate later
    "ignore::sqlalchemy.exc.LegacyAPIWarning",
    # Suppress RuntimeWarning about coroutines from pytest-mock
    "ignore::RuntimeWarning:pytest_mock",
    "ignore:coroutine.*was never awaited:RuntimeWarning",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
