[project]
name = "arquivo-da-violencia-api"
version = "1.0.0"
description = "Violence tracking API for Rio de Janeiro"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    # Database
    "sqlmodel>=0.0.22",
    "alembic>=1.14.0",
    "aiosqlite>=0.20.0",
    "greenlet>=3.0.0",
    # Task queue
    "arq>=0.26.0",
    "redis>=5.0.0",
    # Content extraction
    "trafilatura>=2.0.0",
    "feedparser>=6.0.0",
    "googlenewsdecoder>=0.1.0",
    "beautifulsoup4>=4.12.0",
    # LLM
    "google-cloud-aiplatform>=1.70.0",
    # Utilities
    "python-dateutil>=2.9.0",
    "httpx>=0.28.0",
    "pydantic-settings>=2.6.0",
    "loguru>=0.7.0",
    # Authentication
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    "firecrawl-py>=4.12.0",
    "instructor>=1.13.0",
    "jsonref>=1.1.0",
    "tenacity>=9.0.0",
    "unidecode>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true

